# serverguard-oss

./: .env.example  .gitignore  AGENTS.md  CHANGELOG.md  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  SECURITY.md  ServerGuard_Research_Paper.docx  __init__.py  pyproject.toml  version.py
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  pages.yml  release.yml
agent/: __init__.py  client.py  enrichment.py  learner.py  providers.py
cli/: cmd_ask.py  cmd_audit.py  cmd_events.py  cmd_model.py  cmd_setup.py  cmd_status.py  main.py
config/: loader.py  models.py  validator.py
daemon/: daemon.py  watcher.py
detectors/: base.py  ssh_bruteforce.py
docs/: configuration.md  index.md  install.md
docs/plans/: 2026-04-25-serverguard-research-charter.md  2026-04-27-cpp-v1-vertical-design.md  2026-04-27-cpp-v1-vertical.md
events/: model.py
fixtures/configs/: basic.toml
fixtures/expected-events/: ssh-bruteforce.json
gateway/: __init__.py  telegram_bot.py
implementations/cpp/src/: cli.cpp  cli_commands.hpp  config.hpp  config_validate.hpp  daemon.cpp  detector.hpp  event.hpp  runner.hpp  ssh_auth.hpp  storage.cpp  storage.hpp
implementations/cpp/tests/: cli_contract_test.cpp  config_contract_test.cpp  config_validation_test.cpp  daemon_contract_test.cpp  detector_contract_test.cpp  ssh_auth_contract_test.cpp  storage_contract_test.cpp
notifiers/: __init__.py  base.py  discord.py  email.py  slack.py  telegram.py  webhook.py
packaging/: serverguard.service
parsers/: ssh_auth.py
scripts/: install.sh
security/: __init__.py  audit.py  input_sanitizer.py  rate_limiter.py
spec/: cli.md  config.md  contract-tests.md  database.md  detection-rules.md  events.md  implementation-rules.md  serverguard-v1.md
storage/: sqlite.py
tests/: conftest.py
tests/contract/: test_v1_contract.py
tests/fixtures/configs/: basic.toml
tests/unit/: test_config.py  test_detector.py  test_parser.py  test_storage.py
