[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "serverguard"
version = "0.0.2"
description = "Autonomous server guardian — AI-powered threat detection, self-healing, and monitoring for Linux servers"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
keywords = ["security", "monitoring", "server", "threat-detection", "cli", "autonomous", "ai", "self-healing"]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Environment :: Console",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Security",
    "Topic :: System :: Monitoring",
    "Topic :: System :: Systems Administration",
]
dependencies = [
    # CLI + TUI
    "typer>=0.12.0",
    "rich>=13.7.0",
    # Config
    "pydantic>=2.6.0",
    # Storage
    "aiosqlite>=0.20.0",
    # File watching
    "watchfiles>=0.21.0",
    # HTTP (notifications + AI)
    "httpx>=0.27.0",
]

[project.optional-dependencies]
ai = [
    "openai>=1.30.0",
    "anthropic>=0.25.0",
]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.4.0",
]

[project.scripts]
sg  = "cli.main:app"
sgd = "daemon.daemon:main"
serverguard = "cli.main:app"

[project.urls]
Homepage      = "https://github.com/AdityaKumar41/serverguard-oss"
Repository    = "https://github.com/AdityaKumar41/serverguard-oss"
Issues        = "https://github.com/AdityaKumar41/serverguard-oss/issues"
Changelog     = "https://github.com/AdityaKumar41/serverguard-oss/blob/main/CHANGELOG.md"
Documentation = "https://github.com/AdityaKumar41/serverguard-oss/tree/main/docs"

[tool.hatch.build.targets.wheel]
packages = [
    "cli",
    "config",
    "daemon",
    "detectors",
    "events",
    "parsers",
    "security",
    "storage",
    "notifiers",
    "agent",
    "gateway",
]
include = ["version.py", "__init__.py"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths    = ["tests"]
addopts      = "-v --tb=short"

[tool.ruff]
line-length    = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["B008"]
